--- a/newsfragments/221.fixed.md
+++ b/newsfragments/221.fixed.md
@@ -1,1 +1,1 @@
-Postgres: Fix an issue where initialization woud fail to happen properly.
+Postgres: Fix an issue where initialization would fail to happen properly.
