--- a/newsfragments/281.added.md
+++ b/newsfragments/281.added.md
@@ -1,1 +1,1 @@
-Add `ingress.type` field to apply automatic behaviours depending on ingress controller. Supports `kubernetes-nginx` only for now.
+Add `ingress.controllerType` field to apply automatic behaviours depending on ingress controller. Supports `kubernetes-nginx` only for now.
