--- a/newsfragments/326.fixed.md
+++ b/newsfragments/326.fixed.md
@@ -1,1 +1,1 @@
-Fixed Helm template for Synapse deployment not properly configuring appservice registration file path
+Fixed Helm template for Synapse deployment not properly configuring appservice registration file path.
