--- a/newsfragments/344.added.md
+++ b/newsfragments/344.added.md
@@ -1,1 +1,1 @@
-Add an example for Apache2 to the reverse proxy documentation in the README
+Add an example for Apache2 to the reverse proxy documentation in the README.
