--- a/newsfragments/371.added.md
+++ b/newsfragments/371.added.md
@@ -1,1 +1,1 @@
-Matrix Authentication Service: Allow to setup without enabling auth delegation in Synapse.
+Matrix Authentication Service: Allow to setup without enabling auth delegation in Synapse using `matrixAuthenticationService.preMigrationSynapseHandlesAuth`.
